# anaxa-builder

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  plan.md
src/: build_integration.rs  build_rs.rs  config_io.rs  graph.rs  lib.rs  logic.rs  main.rs  parser.rs  schema.rs
src/codegen/: AGENTS.md  c.rs  dot.rs  mod.rs  rust.rs
src/tui/: AGENTS.md  mod.rs  state.rs  ui.rs
