[package]
name = "anaxa-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
cursive = "0.21.1"
cursive_tree_view = "0.9.0"
evalexpr = "13.1.0"
petgraph = "0.8.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.11"
walkdir = "2.5.0"
