[package]
name = "anaxa-builder"
description = "A modern native Rust configuration management system"
version = "0.1.0"
edition = "2021"
authors = ["<moyan> <me@moyanjdc.top>"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
evalexpr = "13.1.0"
petgraph = "0.8.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.11"
walkdir = "2.5.0"
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }

[dev-dependencies]
tempfile = "3.24.0"

[[bin]]
name = "cargo-anaxa"
path = "src/main.rs"
