[package]
name = "anaxa-builder"
description = "A modern native Rust configuration management system"
version = "0.2.2"
edition = "2021"
authors = ["<moyan> <me@moyanjdc.top>"]
license = "MIT"
repository = "https://github.com/RainSTR-Studio/anaxa-builder"
categories = [
    "command-line-utilities",
    "development-tools",
    "config",
    "development-tools::cargo-plugins",
    "development-tools::build-utils",
]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
evalexpr = "13.1.0"
petgraph = "0.8.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.11"
walkdir = "2.5.0"
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
regex = "1.11.1"

[dev-dependencies]
tempfile = "3.24.0"

[[bin]]
name = "cargo-anaxa"
path = "src/main.rs"
